# rs-jsonl2xlsx

./: Cargo.toml  README.md  example.sh  opt.sh  rs-jsonl2xlsx.wasm  wasi.sh
sample.d/: input.jsonl
src/: lib.rs  main.rs
