[package]
name = "rs-jsonl2xlsx"
version = "0.1.0"
edition = "2024"

description = "Converts the json lines to an xlsx file."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-jsonl2xlsx"
homepage = "https://github.com/takanoriyanagitani/rs-jsonl2xlsx"
documentation = "https://docs.rs/rs-jsonl2xlsx/latest"
keywords = ["json", "jsonl", "excel", "wasi"]
category = ["command-line-utilities"]

exclude = [
    "opt.wasm",
    "rs-jsonl2xlsx.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.rust_xlsxwriter]
version = "0.92"
default-features = false
features = [
	"chrono",
    "serde",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]

[dependencies.clap]
version = "4.5"
features = [
    "derive",
]
